--- a/wordle.html
+++ b/wordle.html
@@ -7,14 +7,14 @@
     <title>Wordle Solver</title>
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/index.819f272a.js"></script>
-    <link rel="stylesheet" href="/assets/index.b22ac771.css">
+    <script type="module" crossorigin src="/assets/index.e0dc422e.js"></script>
+    <link rel="stylesheet" href="/assets/index.a47b52d7.css">
   </head>
   <body>
 
 
     <header>
-      <h1>Wordle Solver</h1>
+      <h1>Wordle Helper</h1>
     </header>
   
     <p><em>Click on Letters to Change Color</em></p>
@@ -22,6 +22,7 @@
 
     </div>
     <div>
+        <button id="guess-btn">Guess</button>
         <button id="reset-btn">Reset</button>
     </div>
 
