--- a/wordle.html
+++ b/wordle.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wordle Solver</title>
+    <title>Wordle Helper</title>
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/index.10405c1a.js"></script>
-    <link rel="stylesheet" href="/assets/index.a47b52d7.css">
+    <script type="module" crossorigin src="/assets/index.733ea53a.js"></script>
+    <link rel="stylesheet" href="/assets/index.876b8008.css">
   </head>
   <body>
 
@@ -17,13 +17,13 @@
       <h1>Wordle Helper</h1>
     </header>
   
-    <p><em>Click on Letters to Change Color</em></p>
+    <p><em>Click on Letters to Rotate Through Colors</em></p>
     <div id="guess-div">
 
     </div>
     <div>
-        <button id="guess-btn">Guess</button>
-        <button id="reset-btn">Reset</button>
+        <button id="guess-btn" class="button">Guess</button>
+        <button id="reset-btn" class="button">Reset</button>
     </div>
 
     <hr>
