--- a/wordle.html
+++ b/wordle.html
@@ -7,15 +7,15 @@
     <title>Wordle Helper</title>
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/index.f6d02892.js"></script>
-    <link rel="stylesheet" href="/assets/index.c25b5bfc.css">
+    <script type="module" crossorigin src="/assets/index.417a8cc5.js"></script>
+    <link rel="stylesheet" href="/assets/index.4fd6d19c.css">
   </head>
   <body>
 
     <div class="dialog-box" id="helpbox">
       <div class="dialog-content">
         <div class="dialog-header">
-          <h2>How to use:</h2>
+          <h2>How To Use</h2>
           <button id="close-btn" class="close">X</button>
         </div>
         <div class="dialog-body">
@@ -31,20 +31,8 @@
           <p>Click <strong>Reset</strong> to start over.</p>
           <hr />
           <p>
-            This was designed to assist with sites such as
-            <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a>
-            or <a href="https://www.wordleunlimited.com/">Wordle Unlimited</a>.
-          </p>
-          <p>
-            The 15,918 words in this list were randomly found on the Internet
-            and contains significantly more words than the official Wordle list
-            or the Scrabble dictionary.
-          </p>
-          <p>
             This was loving created to scratch my own itch by
-            <a href="https://findbenhere.com/">Benjamin Messick</a>. I use it
-            after I have finished the day's Wordle to see how each of my guesses
-            reduced the word list.
+            <a href="https://findbenhere.com/">Benjamin Messick</a>. 
           </p>
         </div>
       </div>
@@ -58,7 +46,7 @@
     <div id="guess-div">
 
     </div>
-    <div>
+    <div class="buttons">
         <button id="help-btn" class="button">Help</button>
         <button id="guess-btn" class="button">Guess</button>
         <button id="reset-btn" class="button">Reset</button>
