wordle has moved

--- a/wordle.html
+++ b/wordle.html
@@ -1,61 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wordle Helper</title>
+    <title>Wordle Helper has moved</title>
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/index.417a8cc5.js"></script>
     <link rel="stylesheet" href="/assets/index.4fd6d19c.css">
   </head>
   <body>
 
-    <div class="dialog-box" id="helpbox">
-      <div class="dialog-content">
-        <div class="dialog-header">
-          <h2>How To Use</h2>
-          <button id="close-btn" class="close">X</button>
-        </div>
-        <div class="dialog-body">
-          <p>
-            This tool will show the words remaining after each Wordle guess. You
-            enter the letters of your guess using then keyboard. You then click
-            on each letter to change to the color to yellow, green or grey. Each
-            time you click a letter it will cycle to the next color. After the
-            colors and letters match your Wordle guess, click
-            <strong>Guess</strong> to reduce the word list. Repeat to continue
-            to reduce the possible words remaining.
-          </p>
-          <p>Click <strong>Reset</strong> to start over.</p>
-          <hr />
-          <p>
-            This was loving created to scratch my own itch by
-            <a href="https://findbenhere.com/">Benjamin Messick</a>. 
-          </p>
-        </div>
-      </div>
-    </div>
 
-    <header>
-      <h1>Wordle Helper</h1>
-    </header>
-  
-    <p><em>Click on Letters to Rotate Through Colors</em></p>
-    <div id="guess-div">
-
-    </div>
-    <div class="buttons">
-        <button id="help-btn" class="button">Help</button>
-        <button id="guess-btn" class="button">Guess</button>
-        <button id="reset-btn" class="button">Reset</button>
-    </div>
-
-    <hr>
-  
-    <div id="result"></div>
-
+<h1>Wordle Helper has moved:  <a href="https://findbenhere.com/wordle.html">https://findbenhere.com/wordle.html</a></h1>
   
     
   </body>
